fixin name of repo

--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -37,9 +37,9 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!rm -r /content/qiskit-hcnn\n",
-    "!git clone https://github.com/alessandrosebastianelli/qiskit-hcnn.git\n",
-    "if '/content/qiskit-hcnn' not in sys.path: sys.path.append('/content/qiskit-hcnn')"
+    "!rm -r /content/qml4eo_tutorial_qiskit\n",
+    "!git clone https://github.com/alessandrosebastianelli/qml4eo_tutorial_qiskit.git\n",
+    "if '/content/qml4eo_tutorial_qiskit' not in sys.path: sys.path.append('/content/qml4eo_tutorial_qiskit')"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "!pip install -r /content/qml4eo_tutorial_qiskit/requirements.txt -q"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash dowload_data.sh"
+    "!bash /content/qml4eo_tutorial_qiskit/dowload_data.sh"
    ]
   }
  ],
