--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -51,6 +51,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca813583",
+   "metadata": {},
+   "source": [
+    "AI-related"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c207d5b3",
@@ -58,6 +66,43 @@
    "outputs": [],
    "source": [
     "!pip install -r /content/qml4eo_tutorial_qiskit/requirements.txt -q"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07e7088a",
+   "metadata": {},
+   "source": [
+    "EO-related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8c2e3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install --upgrade pyosv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8cecbd5",
+   "metadata": {},
+   "source": [
+    "QC-related"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ef4f35a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -q 'qiskit>=2.0.0'\n",
+    "!pip install -q 'qiskit-machine-learning>=0.7.0'"
    ]
   },
   {
