--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -106,6 +106,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec3a913b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pytorch_lightning.callbacks import ModelCheckpoint\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pytorch_lightning as pl\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "from hybrid_model import *\n",
+    "from torch_loader import EuroSATDataModule\n",
+    "\n",
+    "torch.multiprocessing.set_start_method('spawn')  \n",
+    "torch.set_float32_matmul_precision('high')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c40ed062",
    "metadata": {},
@@ -135,6 +155,106 @@
    "outputs": [],
    "source": [
     "!bash /content/qml4eo_tutorial_qiskit/dowload_data.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "721b3b9c",
+   "metadata": {},
+   "source": [
+    "# 4. Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36263af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# This is the full list of classes in EuroSAT\n",
+    "classes = ['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway', 'Industrial', 'Pasture','PermanentCrop', 'Residential', 'River', 'SeaLake']\n",
+    "\n",
+    "# For simplicty we will reduce them to 2\n",
+    "classes = ['Forest', 'Highway']\n",
+    "\n",
+    "data_module = EuroSATDataModule(\n",
+    "        whitelist_classes = classes,\n",
+    "        batch_size        = 16, \n",
+    "        bands             = [3,2,1],\n",
+    "        num_workers       = 4,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eb9afa3",
+   "metadata": {},
+   "source": [
+    "## 4.1 Plot some data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "485e0d73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = data_module.setup().train_dataloader()\n",
+    "\n",
+    "x, y = next(iter(loader))\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=4, ncols=4)\n",
+    "axes = axes.flatten()\n",
+    "\n",
+    "\n",
+    "x = x.cpu().detach().numpy()\n",
+    "x = np.moveaxis(x, 1, -1)\n",
+    "\n",
+    "\n",
+    "for i, ax in enumerate(axes):\n",
+    "    ax.imshow(x[i,...])\n",
+    "    ax.axis(False)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "236caeb6",
+   "metadata": {},
+   "source": [
+    "# 5. Run Hybrid model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "788b0c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "network = LightningAlexNetModule(n_qubits=4, num_classes=10)\n",
+    "log_name = 'hybrid_model'\n",
+    "\n",
+    "tb_logger   = pl.loggers.TensorBoardLogger(os.path.join('lightning_logs','classifiers'), name=log_name)\n",
+    "\n",
+    "checkpoint_callback = ModelCheckpoint(\n",
+    "    dirpath=os.path.join('saved_models','classifiers'),\n",
+    "    filename=log_name,\n",
+    "    monitor='val_loss',\n",
+    "    save_top_k=1,\n",
+    "    mode='min',\n",
+    ")\n",
+    "\n",
+    "# Instantiate Trainer\n",
+    "trainer = pl.Trainer(max_epochs=30, callbacks=[checkpoint_callback], logger=tb_logger)\n",
+    "\n",
+    "# Train the model\n",
+    "trainer.fit(network, data_module)"
    ]
   }
  ],
