--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -101,8 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q 'qiskit>=2.0.0'\n",
-    "!pip install -q 'qiskit-machine-learning>=0.7.0'"
+    "!pip install -q qiskit-machine-learning==0.6.0"
    ]
   },
   {
@@ -154,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!bash /content/qml4eo_tutorial_qiskit/dowload_data.sh"
+    "!bash /content/qml4eo_tutorial_qiskit/download_data.sh"
    ]
   },
   {
