minor fix and final test

--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --upgrade pyosv"
+    "!pip install -q --upgrade pyosv"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "id": "5686785e",
    "metadata": {},
    "source": [
-    "The following snippet will download the RGB version of EuroSAT and slit it in train/validation/test sub-datasets."
+    "The following snippet will download the EuroSAT dataset and split it in train/validation/test sub-datasets."
    ]
   },
   {
@@ -180,6 +180,7 @@
     "\n",
     "data_module = EuroSATDataModule(\n",
     "        whitelist_classes = classes,\n",
+    "        root_dir          = '/content',      \n",
     "        batch_size        = 16, \n",
     "        bands             = [3,2,1],\n",
     "        num_workers       = 4,\n",
@@ -201,8 +202,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = data_module.setup().train_dataloader()\n",
-    "\n",
+    "data_module.setup()\n",
+    "loader = data_module.train_dataloader()\n",
     "x, y = next(iter(loader))\n",
     "\n",
     "fig, axes = plt.subplots(nrows=4, ncols=4)\n",
