adding some details

--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -6,17 +6,16 @@
    "metadata": {},
    "source": [
     "# QML4EO-tutorial: Hybrid Quantum Convolutional Neural Network Classifier\n",
-    "## This is a qiskit adapted version of https://github.com/alessandrosebastianelli/QML4EO-tutorial/tree/main\n",
-    "\n",
+    "## This is a qiskit adapted version of [QML4EO-tutorial](https://github.com/alessandrosebastianelli/QML4EO-tutorial/tree/main)\n",
     "\n",
     "Please refer to the following articles to get more insight about this topic:\n",
     "\n",
-    "- Sebastianelli, A., Zaidenberg, D. A., Spiller, D., Le Saux, B., & Ullo, S. L. (2021). On circuit-based hybrid quantum neural networks for remote sensing imagery classification. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 15, 565-580.\n",
-    "- Zaidenberg, D. A., Sebastianelli, A., Spiller, D., Le Saux, B., & Ullo, S. L. (2021, July). Advantages and bottlenecks of quantum machine learning for remote sensing. In 2021 IEEE International Geoscience and Remote Sensing Symposium IGARSS (pp. 5680-5683). IEEE.\n",
-    "- Eurosat: A novel dataset and deep learning benchmark for land use and land cover classification. Patrick Helber, Benjamin Bischke, Andreas Dengel, Damian Borth. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 2019.\n",
-    "- Introducing EuroSAT: A Novel Dataset and Deep Learning Benchmark for Land Use and Land Cover Classification. Patrick Helber, Benjamin Bischke, Andreas Dengel. 2018 IEEE International Geoscience and Remote Sensing Symposium, 2018.\n",
-    "- https://qiskit.org/documentation/machine-learning/tutorials/index.html\n",
-    "- https://pennylane.ai/qml/demos_qml.html"
+    "- [1] Sebastianelli, A., Zaidenberg, D. A., Spiller, D., Le Saux, B., & Ullo, S. L. (2021). On circuit-based hybrid quantum neural networks for remote sensing imagery classification. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 15, 565-580.\n",
+    "- [2] Zaidenberg, D. A., Sebastianelli, A., Spiller, D., Le Saux, B., & Ullo, S. L. (2021, July). Advantages and bottlenecks of quantum machine learning for remote sensing. In 2021 IEEE International Geoscience and Remote Sensing Symposium IGARSS (pp. 5680-5683). IEEE.\n",
+    "- [3] Eurosat: A novel dataset and deep learning benchmark for land use and land cover classification. Patrick Helber, Benjamin Bischke, Andreas Dengel, Damian Borth. IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing, 2019.\n",
+    "- [4] Introducing EuroSAT: A Novel Dataset and Deep Learning Benchmark for Land Use and Land Cover Classification. Patrick Helber, Benjamin Bischke, Andreas Dengel. 2018 IEEE International Geoscience and Remote Sensing Symposium, 2018.\n",
+    "- [Qiskit web-page](https://qiskit.org/documentation/machine-learning/tutorials/index.html)\n",
+    "- [Pennylae web-page](https://pennylane.ai/qml/demos_qml.html)"
    ]
   },
   {
@@ -178,11 +177,12 @@
     "# For simplicty we will reduce them to 2\n",
     "classes = ['Forest', 'Highway']\n",
     "\n",
+    "# Torch lightning data loader module\n",
     "data_module = EuroSATDataModule(\n",
-    "        whitelist_classes = classes,\n",
+    "        whitelist_classes = classes, # Here we are selecting the classes to be classified\n",
     "        root_dir          = '/content',      \n",
     "        batch_size        = 16, \n",
-    "        bands             = [3,2,1],\n",
+    "        bands             = [3,2,1], # Here we are selecting only the RGB bands\n",
     "        num_workers       = 4,\n",
     ")"
    ]
@@ -227,7 +227,37 @@
    "id": "236caeb6",
    "metadata": {},
    "source": [
-    "# 5. Run Hybrid model"
+    "# 5. Run Hybrid model\n",
+    "\n",
+    "![](https://www.researchgate.net/publication/354779281/figure/fig6/AS:11431281080884121@1661423072104/Proposed-hybrid-QNN-classifier-1-The-network-is-a-modified-version-of-LeNet-5-where-the.png)\n",
+    "\n",
+    "\n",
+    "The method proposed in [1] introduces a **hybrid quantum-classical convolutional neural network (QCNN)** designed for remote sensing image classification, specifically applied to land-use and land-cover (LULC) classification using the EuroSAT dataset. \n",
+    "\n",
+    "The architecture integrates a quantum circuit layer into a classical CNN (based on a modified LeNet-5), with quantum layers implemented using different types of gate-based circuits, including both entangled and non-entangled designs. Classical data are first embedded into quantum states via unitary transformations, enabling the quantum circuit to process them through parametrized gates.\n",
+    "\n",
+    "With respect to [1], here we are going to use a more \"complex\" classical deep learning network.\n",
+    "\n",
+    "## 5.1 Torch lightning Hybrid AlexNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea0f01d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_qubits = 2 # Feel free to \"play\" with this parameter\n",
+    "network = LightningAlexNetModule(n_qubits=number_of_qubits, num_classes=len(classes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4531ba82",
+   "metadata": {},
+   "source": [
+    "## 5.2 Train and monitor the hybrid model"
    ]
   },
   {
@@ -237,17 +267,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network = LightningAlexNetModule(n_qubits=2, num_classes=2)\n",
-    "log_name = 'hybrid_model'\n",
+    "log_name  = 'hybrid_model'\n",
     "\n",
-    "tb_logger   = pl.loggers.TensorBoardLogger(os.path.join('lightning_logs','classifiers'), name=log_name)\n",
+    "# will log some relevant information about training/validation/testing of the model\n",
+    "tb_logger = pl.loggers.TensorBoardLogger(os.path.join('lightning_logs','classifiers'), name=log_name)\n",
     "\n",
+    "# will save models weights\n",
     "checkpoint_callback = ModelCheckpoint(\n",
-    "    dirpath=os.path.join('saved_models','classifiers'),\n",
-    "    filename=log_name,\n",
-    "    monitor='val_loss',\n",
-    "    save_top_k=1,\n",
-    "    mode='min',\n",
+    "    dirpath         = os.path.join('saved_models','classifiers'),\n",
+    "    filename        = log_name,\n",
+    "    monitor         = 'val_loss',\n",
+    "    save_top_k      = 1,\n",
+    "    mode            = 'min',\n",
     ")\n",
     "\n",
     "# Instantiate Trainer\n",
