fixing class order

--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -175,7 +175,7 @@
     "classes = ['AnnualCrop', 'Forest', 'HerbaceousVegetation', 'Highway', 'Industrial', 'Pasture','PermanentCrop', 'Residential', 'River', 'SeaLake']\n",
     "\n",
     "# For simplicty we will reduce them to 2\n",
-    "classes = ['Forest', 'Highway']\n",
+    "classes = ['AnnualCrop', 'Forest']\n",
     "\n",
     "# Torch lightning data loader module\n",
     "data_module = EuroSATDataModule(\n",
@@ -209,8 +209,9 @@
     "fig, axes = plt.subplots(nrows=4, ncols=4)\n",
     "axes = axes.flatten()\n",
     "\n",
+    "if 'CUDA' in x.device: x = x.cpu().detach().numpy()\n",
+    "else: x = x.numpy()\n",
     "\n",
-    "x = x.cpu().detach().numpy()\n",
     "x = np.moveaxis(x, 1, -1)\n",
     "\n",
     "\n",
