now running also on CPU

--- a/HQCNN.ipynb
+++ b/HQCNN.ipynb
@@ -183,7 +183,7 @@
     "        root_dir          = '/content',      \n",
     "        batch_size        = 16, \n",
     "        bands             = [3,2,1], # Here we are selecting only the RGB bands\n",
-    "        num_workers       = 4,\n",
+    "        num_workers       = 2, # This depends on your hardware, google colab has only 2\n",
     ")"
    ]
   },
@@ -209,8 +209,8 @@
     "fig, axes = plt.subplots(nrows=4, ncols=4)\n",
     "axes = axes.flatten()\n",
     "\n",
-    "if 'CUDA' in x.device: x = x.cpu().detach().numpy()\n",
-    "else: x = x.numpy()\n",
+    "if 'cpu' in str(x.device): x = x.numpy()\n",
+    "else: x = x.cpu().detach().numpy()\n",
     "\n",
     "x = np.moveaxis(x, 1, -1)\n",
     "\n",
